version/0.17/_sources/api/solver/_autosummary/settings/phase_material.rst.txt
:orphan:

.. _phase_material:

phase_material
==============

.. autoclass:: ansys.fluent.core.solver.settings_232.phase_material.phase_material
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`turb_visc_func_mf_child <turb_visc_func_mf_child>`


.. rubric:: Included in:

======================   ==================

Parent                              Summary

======================   ==================
:ref:`model <model_2>`       'model' child.

======================   ==================

