version/0.19/_sources/api/solver/_autosummary/settings/phase_material.rst.txt
:orphan:

.. _phase_material:

phase_material
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.phase_material.phase_material
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`turb_visc_func_mf_child <turb_visc_func_mf_child>`


.. rubric:: Included in:

======================   ==================

Parent                              Summary

======================   ==================
:ref:`model <model_3>`       'model' child.

======================   ==================

